# BasicMemnet

./: .gitignore  LICENSE  README.md  bst-q.sh  create_venv.sh  pkgInfo.py  pyproject.toml  requirements.txt  run_example.sh  setup.py  unittest.sh
data/: action_patterns.json
data/action_sequences/: results.json
examples/: example.py  example_action_sequences.py  semantics25.py
src/: __init__.py  memnet.py  plot_graph.py
src/basic_memnet/: memnet.py  plot_graph.py  word2memnet.py
src/basicmemnet/: memnet.py  plot_graph.py  word2memnet.py
tests/: test_dsl.py
